--- a/Court System/Court System.csproj
+++ b/Court System/Court System.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Oracle.DataAccess, Version=2.112.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\MARWAN\source\repos\DataBase\bin\Debug\Oracle.DataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,11 +56,23 @@
     <Compile Include="Cases.Designer.cs">
       <DependentUpon>Cases.cs</DependentUpon>
     </Compile>
+    <Compile Include="Court.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Court.Designer.cs">
+      <DependentUpon>Court.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Judges.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Judges.Designer.cs">
+      <DependentUpon>Judges.cs</DependentUpon>
     </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -69,8 +85,14 @@
     <EmbeddedResource Include="Cases.resx">
       <DependentUpon>Cases.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Court.resx">
+      <DependentUpon>Court.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Judges.resx">
+      <DependentUpon>Judges.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
