--- a/Court System/Court System.csproj
+++ b/Court System/Court System.csproj
@@ -75,6 +75,12 @@
       <DependentUpon>CrystalReport1.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CrystalReport2.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrystalReport2.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,12 @@
     <Compile Include="Report_form.Designer.cs">
       <DependentUpon>Report_form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report_form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report_form2.Designer.cs">
+      <DependentUpon>Report_form2.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Cases.resx">
       <DependentUpon>Cases.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +122,10 @@
     <EmbeddedResource Include="CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CrystalReport2.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrystalReport2.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -127,6 +143,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Report_form.resx">
       <DependentUpon>Report_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report_form2.resx">
+      <DependentUpon>Report_form2.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
